chore: add loading

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -7,7 +7,30 @@
 </head>
 <body>
 <div class="wrap">
-    <input type="text" placeholder="example.com" id="input" autofocus>
+    <div class="wrap__input">
+        <div class="input">
+            <input type="text" placeholder="https://example.com" id="input" autofocus>
+            <div id="loading" class="hide">
+                <div class="sk-circle">
+                    <div class="sk-circle1 sk-child"></div>
+                    <div class="sk-circle2 sk-child"></div>
+                    <div class="sk-circle3 sk-child"></div>
+                    <div class="sk-circle4 sk-child"></div>
+                    <div class="sk-circle5 sk-child"></div>
+                    <div class="sk-circle6 sk-child"></div>
+                    <div class="sk-circle7 sk-child"></div>
+                    <div class="sk-circle8 sk-child"></div>
+                    <div class="sk-circle9 sk-child"></div>
+                    <div class="sk-circle10 sk-child"></div>
+                    <div class="sk-circle11 sk-child"></div>
+                    <div class="sk-circle12 sk-child"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="website__wrap">
+        HERE
+    </div>
 </div>
 <script src="./main.js"></script>
 </body>
