chore: some improved frontend

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Link Preview K8</title>
-    <link rel="stylesheet" type="text/css" href="./style.scss">
+    <link rel="stylesheet" type="text/css" href="./css/index.scss">
 </head>
 <body>
 <div class="wrap">
