chore: some update frontend design

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -10,7 +10,7 @@
     <div class="wrap__input">
         <div class="input">
             <input type="text" placeholder="https://example.com" id="input" autofocus>
-            <div id="loading" class="hide">
+            <div id="loading">
                 <div class="sk-circle">
                     <div class="sk-circle1 sk-child"></div>
                     <div class="sk-circle2 sk-child"></div>
